--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,18 @@ ehthumbs.db
 .history/
 
 # ======================================
+# Node.js / npm
+# ======================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm/
+.node_repl_history
+.yarn/
+.pnp.*
+
+# ======================================
 # PHP / Server / CMS 환경
 # ======================================
 
