주 4일 근무 정리

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,12 @@ backup/
 *.orig
 
 # ======================================
+# 데이터베이스 스키마 (로컬 저장용)
+# ======================================
+database/
+*.sql
+
+# ======================================
 # Git 자체 파일
 # ======================================
 .gitattributes
