--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "dev:fix": "bash scripts/fix-port-3000.sh && nodemon server.js",
     "dev:kill": "bash scripts/kill-port-3000.sh && nodemon server.js",
     "prod": "NODE_ENV=production node server.js",
     "start:win": "set TZ=Asia/Seoul && node server.js",
