--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration"
+    "test:integration": "jest tests/integration",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:codegen": "playwright codegen https://disk-cms.simg.kr"
   },
   "keywords": [
     "insurance",
@@ -49,6 +54,7 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.4"
